--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'BreeSerif-Regular';
+    src: url('../fonts/bsr.eot');
+    src: url('../fonts/bsr.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/bsr.woff') format('woff'),
+         url('../fonts/bsr.ttf') format('truetype'),
+         url('../fonts/bsr.svg#bsr') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {font-family:"Open Sans Bold";src:url("../fonts/OpenSans-Bold.eot?") format("eot"),url("../fonts/OpenSans-Bold.woff") format("woff"),url("../fonts/OpenSans-Bold.ttf") format("truetype"),url("../fonts/OpenSans-Bold.svg#OpenSans-Bold") format("svg");font-weight:normal;font-style:normal;}
+
+@font-face {font-family:"Open Sans Semibold";src:url("../fonts/OpenSans-Semibold.eot?") format("eot"),url("../fonts/OpenSans-Semibold.woff") format("woff"),url("../fonts/OpenSans-Semibold.ttf") format("truetype"),url("../fonts/OpenSans-Semibold.svg#OpenSans-Semibold") format("svg");font-weight:normal;font-style:normal;}
+
+@font-face {font-family:"Open Sans Italic";src:url("../fonts/OpenSans-Italic.eot?") format("eot"),url("../fonts/OpenSans-Italic.woff") format("woff"),url("../fonts/OpenSans-Italic.ttf") format("truetype"),url("../fonts/OpenSans-Italic.svg#OpenSans-Italic") format("svg");font-weight:normal;font-style:normal;}
+
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { margin:0; padding:0; }
 table { border-collapse:collapse; border-spacing:0; }
 fieldset,img {  border:0; }
@@ -7,3 +24,92 @@ caption,th { text-align:left; }
 h1,h2,h3,h4,h5,h6 { font-size:100%; font-weight:normal; }
 q:before,q:after { content:''; }
 abbr,acronym { border:0; }
+
+body { background: url('../images/ttpbg.jpg') no-repeat; }
+
+h1 { font-family:"Open Sans Bold"; font-size: 32px; width: 935px; margin: 35px auto 0 auto; text-align: center; padding-bottom: 25px; border-bottom: 1px solid #e3e3e2; margin-bottom: 30px; }
+
+#headerbg {
+    background: url('../images/bgheader.png') repeat-x;
+    width: 100%;
+    height: 146px;
+}
+
+#header {
+    img { float: left; margin-top: 50px; }
+    width: 1000px;
+    height: 109px;
+    margin: 0 auto;
+}
+
+#menu {
+    margin: 50px 7px 0 0;
+    float: right;
+    li { display: inline; margin-right: 28px; font-size: 14px; font-family: 'BreeSerif-Regular'; }
+    a { text-transform: uppercase; text-decoration: none; color: #FFF; &:hover, &.sel { color: #e17863; } }
+}
+
+#container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#content{
+    background-color: #FFF;
+    border-radius: 3px;
+    width: 1000px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.field{
+    float: left;
+    padding-right: 28px;
+    label { width: 100%; display: block; font-family:"Open Sans Semibold"; font-size: 13px; margin-bottom: 5px; }
+}
+
+#search {
+    float: left;
+    height: 234px;
+    width: 100%;
+    position: relative;
+    background: url('../images/bgtitle.png') repeat-x;
+    border-bottom: 1px solid #e5e5e5;
+    form { margin-left: 62px; }
+    .deco { position: absolute; left: 455px; bottom: -23px; background: url('../images/decoarrow.png') no-repeat; width: 75px; height: 23px; }
+}
+
+input[type=submit]{
+    margin: 13px 0 0 30px;
+    border: 1px solid #005eff;        
+    border-radius: 4px;
+    line-height: 49px;
+    height: 49px;
+    padding: 0 29px;
+    color: #FFF;
+    font-size: 17px;
+    font-family: 'BreeSerif-Regular';
+    background: url('../images/bgbtn.png') repeat-x;
+    cursor: pointer;
+}
+
+#question {
+    width: 100%;
+    float: left;
+    padding-top: 85px;
+    img { display: block; margin: 0 auto; }
+}
+
+#footer{
+    background-color: #212121;
+    height: 45px;
+    line-height: 45px;
+    width: 100%;
+    float: left;
+    ul { float: right; margin-right: 30px; }
+    p { font-family:"Open Sans Italic"; font-size: 11px; color: #fff; padding-left: 20px; float: left; }
+    li { font-family:"Open Sans Italic"; font-size: 11px; color: #525252; display: inline; }
+    a { color: #525252; text-decoration: none; }
+}
