--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -15,9 +15,9 @@
 
 @font-face {font-family:"Open Sans Italic";src:url("../fonts/OpenSans-Italic.eot?") format("eot"),url("../fonts/OpenSans-Italic.woff") format("woff"),url("../fonts/OpenSans-Italic.ttf") format("truetype"),url("../fonts/OpenSans-Italic.svg#OpenSans-Italic") format("svg");font-weight:normal;font-style:normal;}
 
-@font-face {font-family:"Open Sans Light";src:url("../OpenSans-Light.eot?") format("eot"),url("../OpenSans-Light.woff") format("woff"),url("../OpenSans-Light.ttf") format("truetype"),url("../OpenSans-Light.svg#OpenSans-Light") format("svg");font-weight:normal;font-style:normal;}
+@font-face {font-family:"Open Sans Light";src:url("../fonts/OpenSans-Light.eot?") format("eot"),url("../fonts/OpenSans-Light.woff") format("woff"),url("../fonts/OpenSans-Light.ttf") format("truetype"),url("../fonts/OpenSans-Light.svg#OpenSans-Light") format("svg");font-weight:normal;font-style:normal;}
 
-@font-face {font-family:"Open Sans";src:url("../OpenSans-Regular.eot?") format("eot"),url("../OpenSans-Regular.woff") format("woff"),url("../OpenSans-Regular.ttf") format("truetype"),url("../OpenSans-Regular.svg#OpenSans") format("svg");font-weight:normal;font-style:normal;}
+@font-face {font-family:"Open Sans";src:url("../fonts/OpenSans-Regular.eot?") format("eot"),url("../fonts/OpenSans-Regular.woff") format("woff"),url("../fonts/OpenSans-Regular.ttf") format("truetype"),url("../fonts/OpenSans-Regular.svg#OpenSans") format("svg");font-weight:normal;font-style:normal;}
 
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { margin:0; padding:0; }
 table { border-collapse:collapse; border-spacing:0; }
