add recalculate function

--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -317,3 +317,9 @@ input[type=submit]{
     width: 600px;
     float: right;
 }
+
+form select {
+    width: 150px;
+    margin-bottom: 18px;
+    height: 30px;
+}
