--- a/src/tasaparo/web/static/css/dropkick.css
+++ b/src/tasaparo/web/static/css/dropkick.css
@@ -154,6 +154,8 @@
   position: relative;
   zoom: 1;
 }
+/*.dk_toggle {max-width: 150px !important; }*/
+/*.dk_label{ max-width: 100px; overflow: hidden; display: block; }*/
 
 .dk_open {
   position: relative;
